--- a/app/ui/login/login.module.css
+++ b/app/ui/login/login.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
